[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum_garde = "0.16.2"
bincode = "1.3.3"
garde = "0.16.2"
nanoid = "0.4.0"
proptest = "1.3.1"
rocksdb = "0.21.0"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
